# bamf

./: .clang-tidy  CMakeLists.txt
driver/: CMakeLists.txt  main.cc  main.cpp
example/: CMakeLists.txt
include/bamf/analyses/: ControlFlowAnalyser.hh  ControlFlowAnalysis.hh  DataFlowAnalyser.hh  DataFlowAnalysis.hh
include/bamf/backend/: BackendInstVisitor.hh  BackendInstructions.hh  MoveInserter.hh  RegAllocator.hh
include/bamf/core/: DecompilationContext.hh  Executable.hh  InputFile.hh  Iterator.hpp  NonMovable.hpp
include/bamf/debug/: Verifier.hh
include/bamf/frontend/: RegisterLocaliser.hh  StackSimulator.hh
include/bamf/graph/: DepthFirstSearch.hh  DominanceComputer.hh  DominatorTree.hh  DotGraph.hh  Edge.hh  Graph.hh
include/bamf/io/: ElfLoader.hh  InputFile.hh  InputStream.hh
include/bamf/ir/: BasicBlock.hh  Constant.hh  Expression.hh  Expressions.hh  Function.hh  GlobalVariable.hh  InstVisitor.hh  Instruction.hh  Instructions.hh  Local.hh  Program.hh  Statement.hh  Statements.hh  Value.hh
include/bamf/pass/: Analysis.hh  Pass.hh  PassManager.hh  PassResult.hh  PassUsage.hh  Statistic.hh
include/bamf/support/: Iterable.hh  Logger.hh  NonCopyable.hh  NonMovable.hh  Stack.hh  Stream.hh
include/bamf/transforms/: AllocPromoter.hh  CfgSimplifier.hh  ConstantBranchEvaluator.hh  ConstantFolder.hh  ConstantPropagator.hh  DeadInstructionPruner.hh  DeadStorePruner.hh  Dumper.hh  RegisterLocaliser.hh  SsaTranslator.hh  StackSimulator.hh  TriviallyDeadInstPruner.hh  TriviallyDeadInstructionPruner.hh
include/bamf/x86/: Backend.hh  BackendResult.hh  Builder.hh  Decoder.hh  Frontend.hh  Instruction.hh  MachineInst.hh  Register.hh
src/: CMakeLists.txt
src/analyses/: ControlFlowAnalyser.cc  ControlFlowAnalysis.cc  DataFlowAnalyser.cc
src/backend/: BackendInstructions.cc  MoveInserter.cc  RegAllocator.cc
src/core/: DecompilationContext.cc  ElfLoader.cc  Executable.cc  InputFile.cc
src/debug/: Dumper.cc  Verifier.cc
src/frontend/: RegisterLocaliser.cc  StackSimulator.cc
src/io/: ElfLoader.cc  InputFile.cc  InputStream.cc
src/ir/: BasicBlock.cc  Expressions.cc  Function.cc  Instruction.cc  Instructions.cc  Local.cc  Program.cc  Statements.cc  Value.cc
src/pass/: PassManager.cc  Statistic.cc
src/support/: Stream.cc
src/transforms/: AllocPromoter.cc  CfgSimplifier.cc  ConstantBranchEvaluator.cc  ConstantFolder.cc  ConstantPropagator.cc  DeadInstructionPruner.cc  DeadStorePruner.cc  Dumper.cc  RegisterLocaliser.cc  SsaTranslator.cc  StackSimulator.cc  TriviallyDeadInstPruner.cc  TriviallyDeadInstructionPruner.cc
src/x86/: Backend.cc  Builder.cc  Decoder.cc  Frontend.cc  Instruction.cc  MachineInst.cc  Register.cc
tests/: CMakeLists.txt
tests/graph/: DepthFirstSearchTest.cc  DominanceComputerTest.cc  GraphTest.cc  TestData.hh
tests/ir/: InstructionTest.cc  ProgramTest.cc  ValueTest.cc
tests/support/: StackTest.cc
tests/x86/: BackendTest.cc  DecoderTest.cc
tools/: CMakeLists.txt
tools/bamf-decomp/: CMakeLists.txt  main.cc
tools/bamf-disasm/: CMakeLists.txt  main.cc
tools/bamf-perm/: CMakeLists.txt  main.cc
